--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,10 @@
         <item>Custom Made Entry</item>
     </string-array>
 -->
+    <string-array name="gst_type">
+        <item>GST</item>
+        <item>IGST</item>
+    </string-array>
     <string-array name="packing">
         <item>MS regular drum</item>
         <item>MS Brand new drum</item>
